<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skid_steer_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mutant@todo.todo">mutant</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>             <!--Python dependency-->
  <depend>urdfdom_py</depend>        <!--URDF parser-->
  <depend>xacro</depend>             <!--Xacro parser-->
  <depend>ros_gz_sim</depend>        <!--Gazebo launch through ROS-->
  <depend>nav_msgs</depend>          <!--For odometry message definition-->
  <depend>geometry_msgs</depend>     <!--For twist commands for /cmd_vel-->
  <depend>custom_interfaces</depend> <!-- Custom interface of service-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
